<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/wabi_sabi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="36dp"
        android:gravity="center_horizontal|top"
        android:text="@string/wabi_sabi"
        android:textAppearance="@style/wabi_sabi"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="54dp"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome"
        android:textAppearance="@style/welcome"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/wabi_sabi"
        app:layout_constraintTop_toBottomOf="@+id/wabi_sabi"
        app:lineHeight="29sp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/rectangle_4"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColorHint="#808080"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/rectangle_4"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:textColorHint="#808080"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/rectangle_4"
        android:ems="10"
        android:hint="@string/create_pass"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="#808080"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rectangle_4"
        android:ems="10"
        android:hint="@string/re_enter_pa"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="#808080"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#F89999"
        android:text="@string/join_us"
        android:textColor="#360D14"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/already_a_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <TextView
        android:id="@+id/already_a_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="93dp"
        android:gravity="top"
        android:text="@string/already_a_m"
        android:textAppearance="@style/already_a_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="61dp"
        android:backgroundTint="#F89999"
        android:text="@string/sign_up"
        android:textColor="#360D14"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/already_a_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/already_a_m" />
</androidx.constraintlayout.widget.ConstraintLayout>