<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EDEB"
    tools:context=".quizstart">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F8EDEB"
        android:clickable="true"
        android:elevation="0dp"
        android:scaleType="fitCenter"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        app:srcCompat="@drawable/quitquiz" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="301dp"
        android:layout_height="59dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:letterSpacing="0.04"
        android:text="@string/how_are_you"
        android:textAppearance="@style/how_are_you"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/button5"
        android:layout_width="238dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="#F89999"
        android:gravity="center"
        android:text="@string/continprof"
        android:textColor="#360D14"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option3"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="254dp"
        android:layout_height="152dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246"
        app:srcCompat="@drawable/launda" />

    <Button
        android:id="@+id/option1"
        android:layout_width="135dp"
        android:layout_height="129dp"
        android:backgroundTint="#F9DCC4"
        android:text="@string/cheerful"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/option3"
        app:layout_constraintEnd_toStartOf="@+id/option2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/option2"
        android:layout_width="135dp"
        android:layout_height="129dp"
        android:backgroundTint="#F9DCC4"
        android:text="@string/gloomy"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/option4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/option1"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/option3"
        android:layout_width="135dp"
        android:layout_height="129dp"
        android:backgroundTint="#F9DCC4"
        android:text="@string/agony"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/option4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/option4"
        android:layout_width="135dp"
        android:layout_height="129dp"
        android:backgroundTint="#F9DCC4"
        android:text="@string/fear"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/option3"
        app:layout_constraintTop_toBottomOf="@+id/option2"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>