<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/wabi_sabi"
        android:layout_width="196dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="52dp"
        android:gravity="center_horizontal|top"
        android:text="@string/wabi_sabi"
        android:textAppearance="@style/wabi_sabi"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="77dp"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome_back"
        android:textAppearance="@style/welcome"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wabi_sabi" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:background="@drawable/rectangle_4"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        android:textColorHint="#808080"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="91dp"
        android:background="@drawable/rectangle_4"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#808080"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="148dp"
        android:backgroundTint="#F89999"
        android:text="@string/sign_up"
        android:textColor="#360D14"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
</androidx.constraintlayout.widget.ConstraintLayout>