<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fig_pink"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/wabi_sabi"
        android:layout_width="204dp"
        android:layout_height="63dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/wabi_sabi"
        android:textAppearance="@style/wabi_sabi"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="136dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/profile"
        android:textAppearance="@style/profile"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="155dp" />

    <ImageView
        android:id="@+id/ellipse_8"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#160808"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="221dp" />

    <EditText
        android:id="@+id/rectangle_4"
        android:layout_width="327dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_4"
        android:elevation="9dp"
        android:hint="name"
        android:textColorHint="#808080"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="347dp" />

    <EditText
        android:id="@+id/ageprof"
        android:layout_width="327dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_4"
        android:elevation="9dp"
        android:hint="age"
        android:textColorHint="#808080"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="400dp" />

    <EditText
        android:id="@+id/phonenum"
        android:layout_width="327dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_4"
        android:elevation="9dp"
        android:hint="phone number"
        android:textColorHint="#808080"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="509dp" />

    <EditText
        android:id="@+id/emailprof"
        android:layout_width="327dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_4"
        android:elevation="9dp"
        android:hint="email"
        android:textColorHint="#808080"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="566dp" />

    <Button
        android:id="@+id/contprof"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="#F89999"
        android:text="@string/continprof"
        android:textColor="#360D14"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="626dp" />


</androidx.constraintlayout.widget.ConstraintLayout>