<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCD5CE"
    tools:context=".ProfileAct">


    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="12dp"
        android:gravity="top"
        android:text="@string/profile"
        android:textAppearance="@style/profile"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="408dp"
        android:layout_height="548dp"
        android:layout_marginTop="76dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_6" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="#160808"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:shapeAppearanceOverlay="@style/Circular" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="271dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_4"
        android:contentDescription="name"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textColor="#360D14"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="271dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_4"
        android:contentDescription="age"
        android:gravity="center_vertical"
        android:text="age"
        android:textColor="#360D14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="271dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_4"
        android:contentDescription="Gender"
        android:gravity="center_vertical"
        android:text="Gender"
        android:textColor="#360D14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="271dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_4"
        android:gravity="center_vertical"
        android:text="@string/phone_number"
        android:textColor="#360D14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="271dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_4"
        android:contentDescription="email id"
        android:gravity="center_vertical"
        android:text="email"
        android:textColor="#360D14"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imageView3,shapeableImageView,textView3,textView4,textView7,textView8,textView9" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="#FCD5CE"
        app:itemIconSize="60dp"
        app:itemIconTint="#360D14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />




</androidx.constraintlayout.widget.ConstraintLayout>